--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,94 @@
+/* RESET */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+/* HEADER VIEWPORT FOR DESKTOP MODE*/
+.header-view{
+    height: 10vh;
+    background-color: rgba(0, 150, 136, 1);
+}
+/* /HEADER VIEWPORT FOR DESKTOP MODE*/
+
+
+/* BODY BACKGROUNG COLOR*/
+body {
+    background-color: rgba(213, 219, 216, 1);
+}
+/* /BODY BACKGROUNG COLOR*/
+
+
+/* CONTAINER FOR BOOLZAP STRUCTURE */
+.boolzap-container{
+    display: flex;
+    transform: translateY(-5vh);
+    height: 90vh;
+    width: 90%;
+    margin: 0 auto;
+    /* debug */
+    background-color: blue;
+    border: 1px solid black;
+}
+/* /CONTAINER FOR BOOLZAP STRUCTURE */
+
+/* DIMENSION OF THE COLUMN IN THE CONTAINER */
+.boolzap-left{
+    display: flex;
+    flex-direction: column;
+    /* debug */
+    width: 30%;
+    background-color: green;
+}
+
+.boolzap-right{
+    /* debug */
+    width: 70%;
+    background-color: yellow;
+}
+/* /DIMENSION OF THE COLUMN IN THE CONTAINER */
+
+/* ELEMENTS DIMENSIONS */
+.left-header, .right-header, .right-footer{
+    height: 10%;
+    /* debug */
+    width: 100%;
+    background-color: aqua;
+    border: 1px solid black;
+}
+
+.left-notification{
+    height: 10%;
+    /* debug */
+    width: 100%;
+    background-color: red;
+    border: 1px solid black;
+}
+
+.left-search{
+    height: 5%;
+    /* debug */
+    width: 100%;
+    background-color: blue;
+    border: 1px solid black;
+}
+
+.left-contacts{
+    overflow-y: scroll;
+    height: 75%;
+    /* debug */
+    width: 100%;
+    background-color: violet;
+    border: 1px solid black;
+}
+
+.right-messages-container{
+    height: 80%;
+    overflow-y: scroll;
+    /* debug */
+    width: 100%;
+    background-color: orange;
+    border: 1px solid black;
 }
