--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,9 @@
     box-sizing: border-box;
 }
 
-/* HEADER VIEWPORT FOR DESKTOP MODE*/
-.header-view{
-    height: 10vh;
-    background-color: rgba(0, 150, 136, 1);
-}
-/* /HEADER VIEWPORT FOR DESKTOP MODE*/
-
-
 /* BODY BACKGROUNG COLOR*/
 body {
-    background-color: rgba(213, 219, 216, 1);
+    background: linear-gradient(to bottom, rgba(0, 150, 136, 1), rgba(0, 150, 136, 1)15%, rgba(213, 219, 216, 1) 15%, rgba(213, 219, 216, 1) 100%);
 }
 /* /BODY BACKGROUNG COLOR*/
 
@@ -24,11 +16,10 @@ body {
 /* CONTAINER FOR BOOLZAP STRUCTURE */
 .boolzap-container{
     display: flex;
-    transform: translateY(-5vh);
     height: 90vh;
     width: 90%;
     max-width: 2500px;
-    margin: 0 auto;
+    margin: 5vh auto;
     /* debug */
     background-color: blue;
     border: 1px solid black;
